# chrome-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/chrome_scraper/: __init__.py  browser.py  examples.py
src/chromescraper/: browser.py  examples.py
src/lazyscraper/: browser.py  examples.py
